tests/ui/coercion/subtyping-inhibits-deref-coercion.stderr
error[E0308]: mismatched types
  --> $DIR/subtyping-inhibits-deref-coercion.rs:31:5
   |
LL |     x
   |     ^ one type is more general than the other
   |
   = note: expected mutable reference `&mut Thing<fn(&())>`
              found mutable reference `&mut Thing<for<'a> fn(&'a ())>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
